--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
 	      <head>
 	          <title>fikunayomioluwa</title>
-			      <link rel="stylesheet" type="text/css" href= "home.css"/>
+			      <link rel="stylesheet" type="text/css" href= "index.css"/>
 			      <script src="1-index.js"></script>
         </head>
         <body>
